tests/language_modules/07_string/valid/string_instr.vf
module StringInstr

function position() returns Integer
is
    return String.instr("veraflow", "flow")
end position

end StringInstr