tests/language_modules/07_string/invalid_semantics/string_instr_needle_type.vf
module StringInstrNeedleType

function position() returns Integer
is
    return String.instr("veraflow", 1)
end position

end StringInstrNeedleType